--- a/src/style.scss
+++ b/src/style.scss
@@ -215,13 +215,13 @@ a.button {
     @include display_flex(row, center, center, nowrap);
     flex: 2;
     position: relative;
-    width: 840px;
+    width: auto;
     height: 100%;
     border: 1px solid lightgray;
     .year-wheel {
         overflow: scroll;
         width: 100%;
-        height: 100%;
+        height: auto;
     }
     
     .zoom-buttons {
